============
 Change log
============

0.5 (unreleased)
================

Features
--------

- Users having the role `Administrator` can delete the whole address
  book on the address book edit form.

- Last modification time of objects is now stored and displayed (in
  UTC!).

- Users having the role `Administrator` can import data in the master
  data area.

- Added ability to enter additional packages names at installation
  (e. g. to install a specific import file reader).

- Users having the role `Administrator` can add new fields to address
  book entities in the master data area. These fields as useable for
  editors and visitors, too.

Removed features
----------------

- Removed some fields which are not always necessary and which can be
  re-added when needed as user defined fields:

  - state field on the postal address (It only displayed German
    states.),

  - sex field on person,

  - notes fields on address book, postal address, phone number, e-mail
    address, home page address, file and keyword,

  - kind fields on postal address, phone number, e-mail address and
    home page address.


Bug fixes
---------

- Uploading a new file changes the stored name of the file.

- When uploading a file with an unknown mime type (aka
  `application/octet-stream`) the actual mime type is guessed using
  the file extension and file content.

- The person list is now ordered by the displayed titles instead of
  the internal ids.

0.4 (2009-05-15)
================

Features
--------

- Files can be uploaded and added to persons. (Files are stored as
  ZODB-Blob-Objects.)

- Added logging of page accesses to `access.log`.

- ``install.py`` now asks for hostname and portnumber and logging
  configuration, so changing ``deploy.ini`` is no longer necessary.


0.3.3 (2009-04-05)
==================

- Added two package dependencies which are necessary to convert an
  existing ZODB of a previous address book version.


0.3.2 (2009-04-03)
==================
